--- a/style.css
+++ b/style.css
@@ -30,3 +30,45 @@ a:link, a:visited, a:active {
 a:link {
     background-color: hsl(220, 100%, 100%);
 }
+
+svg {
+    width: 1920px;
+    height: 1080px;
+}
+
+.background svg path {
+    fill: #ffff00;
+    transition: all 2s ease;
+}
+
+section {
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    transform: translateY(-50%);
+}
+
+button {
+    outline: none;
+    border: 1px solid #fff;
+    padding: 19px 58px;
+    border-radius: 4px;
+    background-color: transparent;
+    font-size: 17px;
+    color: #fff;
+    font-weight: 900;
+    letter-spacing: 4px;
+    word-spacing: 4px;
+    cursor: pointer;
+    opacity: 1;
+    transition: all 0.2s ease-out;
+}
+
+button:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+button:active {
+    transform: scale(0.9);
+}
